# AoC2025

./: README.md  aoc2025.cabal  get_inputs.sh
benchmarks/: MainBenchmark.hs
code/: Day01.hs  Day01.org  Day02.hs  Day02.org  Day03.hs  Day03.org  Day04.hs  Day04.org
