cabal-version: 3.12
name: aoc2025
version: 0.1.0.0
build-type: Simple

library
  hs-source-dirs: code
  exposed-modules: Day01, Day02, Day03, Day04
  build-depends: base >=4.18 && <5,
                 split >=0.2.5,
  default-language: Haskell2010


benchmark fullbenchmark
    type: exitcode-stdio-1.0
    hs-source-dirs: benchmarks
    main-is: MainBenchmark.hs
    build-depends: base ^>= 4.18,
                   aoc2025,
                   criterion
    ghc-options: -O2 -rtsopts -with-rtsopts=-A32m
    default-language:    Haskell2010
